--- a/package.json
+++ b/package.json
@@ -6,14 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "antd-mobile": "^2.3.1",
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
+    "body-parser": "^1.19.0",
+    "customize-cra": "^0.9.1",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
+    "immutable": "^4.0.0-rc.12",
+    "react": "16.8.6",
+    "react-app-rewired": "^2.1.5",
+    "react-dom": "16.8.6",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.4",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -30,5 +44,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "glob": "^7.1.6",
+    "json-server": "^0.15.1",
+    "koa": "^2.11.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^7.4.0",
+    "mockjs": "^1.1.0",
+    "styled-components": "^4.4.1"
   }
 }
